--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <application
         android:label="healthapp"
         android:name="${applicationName}"
@@ -53,5 +54,11 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <receiver android:name="dk.cachet.activity_recognition_flutter.ActivityRecognizedBroadcastReceiver"/>
+<service
+   android:name="dk.cachet.activity_recognition_flutter.ActivityRecognizedService"
+   android:permission="android.permission.BIND_JOB_SERVICE"
+   android:exported="true"/>
+<service android:name="dk.cachet.activity_recognition_flutter.ForegroundService" />
     </application>
 </manifest>
